Noted optimization changes

--- a/Starter_Code/AlphabetSoupCharity_Optimization.ipynb
+++ b/Starter_Code/AlphabetSoupCharity_Optimization.ipynb
@@ -293,6 +293,7 @@
    ],
    "source": [
     "# Drop the non-beneficial ID columns, 'EIN' and 'NAME'.\n",
+    "# Removed additional field \"Organization\" to increase accuracy\n",
     "application_df.drop(columns=['EIN', 'NAME', 'ORGANIZATION'], inplace=True)\n",
     "application_df.head()"
    ]
@@ -912,6 +913,7 @@
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
+    "# Changed numer of Neurons in each layer and added 2 extra layers\n",
     "# First hidden layer\n",
     "nn.add(tf.keras.layers.Dense(units=200, activation='relu', input_dim=34))\n",
     "\n",
@@ -1255,6 +1257,7 @@
    ],
    "source": [
     "# Train the model\n",
+    "# changed number of epochs in model training\n",
     "fit_model = nn.fit(X_train_scaled, y_train, epochs=150)"
    ]
   },
